<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEFEFE"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_name"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_profile_icon_new" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_name"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="@string/app_person_name"
                            android:imeOptions="actionNext"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/editName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_mobile"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_mobile_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_mobile"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="@string/app_mobile"
                            android:inputType="number"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_email"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_email"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="@string/app_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/editEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <!--<TextView-->
                    <!--android:id="@+id/editEmail"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_weight="1"-->
                    <!--android:fontFamily="@font/calibri_regular"-->
                    <!--android:imeOptions="actionNext"-->
                    <!--android:text="dsaiuf hudhfud shfdsjfhdsh fdshfsh dfdhfhf dsudsf"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_state"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_city_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/img_state"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="State"
                            android:imeOptions="actionNext"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editState"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionNext"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_city"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_city_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_city"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="City"
                            android:layout_centerVertical="true"
                            android:imeOptions="actionDone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_gender"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_snd_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_gender"
                            android:layout_weight="1"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="Standard Name"
                            android:imeOptions="actionDone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editStandard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_category"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_snd_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_category"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="Category Name"
                            android:imeOptions="actionDone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_exam"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_reg_date" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/img_exam"
                            android:fontFamily="@font/calibri_regular"
                            android:hint="Registered Date"
                            android:layout_centerVertical="true"
                            android:imeOptions="actionDone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/editRegisterDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/calibri_regular"
                        android:imeOptions="actionDone"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/proceed_btn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/img_change"
                    android:background="@drawable/button_border_sign"
                    android:fontFamily="@font/calibri_bold"
                    android:gravity="center"
                    android:text="Proceed"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
</layout>